[package]
name = "multi_blockchain_block_metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
futures = "0.3"
